--- a/community/index.html
+++ b/community/index.html
@@ -95,13 +95,13 @@
                 <td class="date" rowspan="3">
                     
                 </td>
-                <td class="title-special">
-                    Nguyễn Thị Tường Vy
+                <td class="title">
+                    Nguyễn Thị Tường Vy, IT
+                    <p>PhD Student in Medical Information, Biostatistics and Complex Systems</p>
                 </td>
             </tr>
             <tr>
                 <td class="speaker">
-                    <p><b>PhD Student in Medical Information, Biostatistics and Complex Systems</b></p>
                     General Hospital of Vienna, Department of Dermatology, Medical University of Vienna
                 </td>
             </tr>
