--- a/community/index.html
+++ b/community/index.html
@@ -97,7 +97,7 @@
                 </td>
                 <td class="title">
                     Nguyễn Thị Tường Vy, IT
-                    <p>PhD Student in Medical Information, Biostatistics and Complex Systems</p>
+                    <h3><p>PhD Student in Medical Information, Biostatistics and Complex Systems</p></h3>
                 </td>
             </tr>
             <tr>
