--- a/program/index.html
+++ b/program/index.html
@@ -109,6 +109,50 @@
             </td>
         </tr>
     </table>
+    <table id="Ha Hoang">
+        <tr>
+            <td class="date" rowspan="3">
+                29/10/2021
+            </td>
+            <td class="title">
+                Updating...
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                Ha Le Hoang (Technical University of Vienna)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <p></p>
+                <p>
+                </p>
+            </td>
+        </tr>
+    </table>
+    <table id="Hoang Le">
+        <tr>
+            <td class="date" rowspan="3">
+                29/10/2021
+            </td>
+            <td class="title">
+                Updating...
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                Hoang Tan Le (University of Natural Resources and Applied Life Sciences, Vienna)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <p></p>
+                <p>
+                </p>
+            </td>
+        </tr>
+    </table>
 <!--
     <table id="PUTSPEAKERNAMEHERE">
         <tr>
