--- a/program/index.html
+++ b/program/index.html
@@ -115,7 +115,7 @@
                 11/2021
             </td>
             <td class="title">
-                Updating...
+                How Artificial Intelligence affects our life
             </td>
         </tr>
         <tr>
@@ -143,6 +143,28 @@
         <tr>
             <td class="speaker">
                 Hoang Tan Le (University of Natural Resources and Applied Life Sciences, Vienna)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <p></p>
+                <p>
+                </p>
+            </td>
+        </tr>
+    </table>
+    <table id="Minh Tran">
+        <tr>
+            <td class="date" rowspan="3">
+                1/2021
+            </td>
+            <td class="title">
+                Secretion and cell-surface display of recombinant proteins in Lactic acid bacteria: Principles and applications
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                Tran Anh Minh (University of Natural Resources and Applied Life Sciences, Vienna)
             </td>
         </tr>
         <tr>
