--- a/program/index.html
+++ b/program/index.html
@@ -63,28 +63,6 @@
             </td>
         </tr>
     </table>
-
-    <table id="Vu Nguyen">
-        <tr>
-            <td class="date" rowspan="3">
-                17/09/2021
-            </td>
-            <td class="title">
-                How plant stem cells control jumping genes 
-            </td>
-        </tr>
-        <tr>
-            <td class="speaker">
-                Vu Nguyen (GMI, Vienna BioCenter)
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Jumping genes, or transposable elements (TEs), occupy a fraction in the animal and plant genomes. TEs can replicate and jump to genomic regions that can disrupt genes and cause genomic instability. How TEs are regulated in the cells is not well-understood. In my project, I use the Arabidopsis thaliana as a plant model to study the machinery which controls TE activation and transposition. I will show you that the plants have different mechanisms to regulate TEs and there is a reinforcing mechanism that control TEs in the plant stem cells, precursors of the germlines, preventing the jumping events pass to the next generation.
-            </td>
-        </tr>
-    </table>
-
     <table id="Vy Nguyen">
         <tr>
             <td class="date" rowspan="3">
@@ -174,7 +152,49 @@
                 </p>
             </td>
         </tr>
+        <tr>
+            <td class="date" rowspan="3">
+                1/2021
+            </td>
+            <td class="title">
+                Secretion and cell-surface display of recombinant proteins in Lactic acid bacteria: Principles and applications
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                Tran Anh Minh (University of Natural Resources and Applied Life Sciences, Vienna)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <p></p>
+                <p>
+                </p>
+            </td>
+        </tr>
     </table>
+    <table id="Vu Nguyen">
+        <tr>
+            <td class="date" rowspan="3">
+                17/09/2021
+            </td>
+            <td class="title">
+                How plant stem cells control jumping genes 
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                Vu Nguyen (GMI, Vienna BioCenter)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Jumping genes, or transposable elements (TEs), occupy a fraction in the animal and plant genomes. TEs can replicate and jump to genomic regions that can disrupt genes and cause genomic instability. How TEs are regulated in the cells is not well-understood. In my project, I use the Arabidopsis thaliana as a plant model to study the machinery which controls TE activation and transposition. I will show you that the plants have different mechanisms to regulate TEs and there is a reinforcing mechanism that control TEs in the plant stem cells, precursors of the germlines, preventing the jumping events pass to the next generation.
+            </td>
+        </tr>
+    </table>
+
+
 <!--
     <table id="PUTSPEAKERNAMEHERE">
         <tr>
