--- a/program/index.html
+++ b/program/index.html
@@ -63,7 +63,7 @@
             </td>
         </tr>
     </table>
-    <table id="Vy Nguyen">
+    <table id="speaker">
         <tr>
             <td class="date" rowspan="3">
                 29/10/2021
@@ -86,8 +86,7 @@
                 </p>
             </td>
         </tr>
-    </table>
-    <table id="Ha Hoang">
+
         <tr>
             <td class="date" rowspan="3">
                 11/2021
@@ -108,8 +107,7 @@
                 </p>
             </td>
         </tr>
-    </table>
-    <table id="Hoang Le">
+
         <tr>
             <td class="date" rowspan="3">
                 12/2021
@@ -130,8 +128,7 @@
                 </p>
             </td>
         </tr>
-    </table>
-    <table id="Minh Tran">
+
         <tr>
             <td class="date" rowspan="3">
                 1/2021
@@ -152,28 +149,7 @@
                 </p>
             </td>
         </tr>
-        <tr>
-            <td class="date" rowspan="3">
-                1/2021
-            </td>
-            <td class="title">
-                Secretion and cell-surface display of recombinant proteins in Lactic acid bacteria: Principles and applications
-            </td>
-        </tr>
-        <tr>
-            <td class="speaker">
-                Tran Anh Minh (University of Natural Resources and Applied Life Sciences, Vienna)
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                <p></p>
-                <p>
-                </p>
-            </td>
-        </tr>
-    </table>
-    <table id="Vu Nguyen">
+
         <tr>
             <td class="date" rowspan="3">
                 17/09/2021
