--- a/program/index.html
+++ b/program/index.html
@@ -68,7 +68,7 @@
             <td class="date" rowspan="3">
                 29/10/2021
             </td>
-            <td class="title">
+            <td class="title" border-left= "5px" solid ="#1c87c9" background-color= "#cccccc">
                 An harmonious combination of biology and informatics: single-cell RNA-sequencing data analysis. 
             </td>
         </tr>
@@ -131,7 +131,7 @@
 
         <tr>
             <td class="date" rowspan="3">
-                1/2021
+                01/2022
             </td>
             <td class="title">
                 Secretion and cell-surface display of recombinant proteins in Lactic acid bacteria: Principles and applications
