--- a/program/index.html
+++ b/program/index.html
@@ -68,7 +68,7 @@
             <td class="date" rowspan="3">
                 29/10/2021
             </td>
-            <td class="title" border-left= "5px" solid ="#1c87c9" background-color= "#cccccc">
+            <td class="title">
                 An harmonious combination of biology and informatics: single-cell RNA-sequencing data analysis. 
             </td>
         </tr>
