--- a/registration/index.html
+++ b/registration/index.html
@@ -47,7 +47,7 @@
 
     <p>
         PhD Talk cordially invite you to register for our seminar for Vietnamese scholars in Austria. Colleagues who want to contribute as a speaker, please select the registration section for the speaker, we will contact you directly via email.
-        If you want to become a speaker, please submit the abstract <a href="https://forms.gle/5ybFqtdUAQsUm5AbA" target="_blank">here!</a>       
+        If you want to become a speaker, please submit the abstract <a href="https://forms.gle/5ybFqtdUAQsUm5AbA" target="_blank">here</a>!       
     </p>
     <iframe class="registration"  src="https://docs.google.com/forms/d/e/1FAIpQLSeFzha3mvKILnJIZYRON8wbuckGimGq8c9wif2PD-u4A5OiXQ/viewform?embedded=true"   width = "1000" height="7000px" frameborder="0" marginheight="0" marginwidth="0"  style="overflow:hidden;">Đang tải…</iframe>
 
