--- a/program/index.html
+++ b/program/index.html
@@ -107,18 +107,17 @@
                 </p>
             </td>
         </tr>
-
         <tr>
             <td class="date" rowspan="3">
-                12/2021
+                12/2022
             </td>
             <td class="title">
-                Updating...
+                Secretion and cell-surface display of recombinant proteins in Lactic acid bacteria: Principles and applications
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Hoang Tan Le (University of Natural Resources and Applied Life Sciences, Vienna)
+                Tran Anh Minh (University of Natural Resources and Applied Life Sciences, Vienna)
             </td>
         </tr>
         <tr>
@@ -131,15 +130,15 @@
 
         <tr>
             <td class="date" rowspan="3">
-                01/2022
+                01/2021
             </td>
             <td class="title">
-                Secretion and cell-surface display of recombinant proteins in Lactic acid bacteria: Principles and applications
+                Emerging Cell Disintegration Techniques for the Accelerated Recovery of Curcuminoids and Enhance Stability
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Tran Anh Minh (University of Natural Resources and Applied Life Sciences, Vienna)
+                Hoang Tan Le (University of Natural Resources and Applied Life Sciences, Vienna)
             </td>
         </tr>
         <tr>
