--- a/community/index.html
+++ b/community/index.html
@@ -47,27 +47,6 @@
     <h2>Vietnamese Scholars in Austria</h2>
     <p>
         Here is the list of Vietnamese Scholars in Austria. If you want to make a connection with them, please contact them directly. If you don't know how to contact them, you can email <a href = "mailto: phdtalk.eu@gmail.com">phdtalk.eu@gmail.com</a>. We will forward the email to your target scholar.    </p>
-
-        <table id="VuNguyen">
-            <tr>
-                <td class="date" rowspan="3">
-                    
-                </td>
-                <td class="scholar">
-                    Nguyễn Hoàng Vũ, PhD Student in Genetics and epigenetics
-                </td>
-            </tr>
-            <tr>
-                <td class="speaker">
-                    Gregor Mendel Institute of Molecular Plant Biology, Campus Vienna BioCenter, University of Vienna
-                </td>
-            </tr>
-            <tr>
-                <td class="abstract">
-                    Research interest: Dynamic epigenetics of the plant stem cells in response to stress.
-                </td>
-            </tr>
-        </table>
         <table id="TrinhPhan">
             <tr>
                 <td class="date" rowspan="3">
@@ -89,6 +68,27 @@
                 </td>
             </tr>
         </table>
+        <table id="VuNguyen">
+            <tr>
+                <td class="date" rowspan="3">
+                    
+                </td>
+                <td class="scholar">
+                    Nguyễn Hoàng Vũ, PhD Student in Genetics and epigenetics
+                </td>
+            </tr>
+            <tr>
+                <td class="speaker">
+                    Gregor Mendel Institute of Molecular Plant Biology, Campus Vienna BioCenter, University of Vienna
+                </td>
+            </tr>
+            <tr>
+                <td class="abstract">
+                    Research interest: Dynamic epigenetics of the plant stem cells in response to stress.
+                </td>
+            </tr>
+        </table>
+
         <table id="VyNguyen">
             <tr>
                 <td class="date" rowspan="3">
@@ -104,11 +104,127 @@
             </tr>
             <tr>
                 <td class="abstract">
-                    Research interest: Bioinformatic approaches in scRNAseq, RNAseq, proteomics, tumor microenvironment.
+                    Research interest: Bioinformatic approaches in scRNAseq, RNAseq, proteomics, tumor microenvironment
                 </td>
             </tr>
         </table>
 
+        <table id="HoangLe">
+            <tr>
+                <td class="date" rowspan="3">
+                </td>
+                <td class="scholar">
+                    Lê Tấn Hoàng, PhD Student in Food Science
+                </td>
+            </tr>
+            <tr>
+                <td class="speaker">
+                    The University of Natural Resources and Applied Life Sciences, Vienna
+                </td>
+            </tr>
+            <tr>
+                <td class="abstract">
+                    Research interest: curcuminoids, food science
+                </td>
+            </tr>
+        </table>
+        <table id="MinhTran">
+            <tr>
+                <td class="date" rowspan="3">
+                </td>
+                <td class="scholar">
+                    Trần Anh Minh, PhD Student in Biotechnology
+                </td>
+            </tr>
+            <tr>
+                <td class="speaker">
+                    The University of Natural Resources and Applied Life Sciences, Vienna
+                </td>
+            </tr>
+            <tr>
+                <td class="abstract">
+                    Research interest: molecular bioloogy, food-grade bacteria, proteins' secretion pathways
+                </td>
+            </tr>
+        </table>
+        <table id="TrangLe">
+            <tr>
+                <td class="date" rowspan="3">
+                </td>
+                <td class="scholar">
+                    Lê Vũ Khánh Trang, PhD Student in Biotechnology
+                </td>
+            </tr>
+            <tr>
+                <td class="speaker">
+                    The University of Natural Resources and Applied Life Sciences, Vienna
+                </td>
+            </tr>
+            <tr>
+                <td class="abstract">
+                    Research interest: probiotic, molecular bioloogy, food-grade bacteria; proteins' secretion pathways
+                </td>
+            </tr>
+        </table>
+
+        <table id="ThuongPhan">
+            <tr>
+                <td class="date" rowspan="3">
+                </td>
+                <td class="scholar">
+                    Phan Xuân Thương, PhD Student in Pharmacy
+                </td>
+            </tr>
+            <tr>
+                <td class="speaker">
+                    Department of Pharmaceutical Technology and Biopharmaceutics, University of Vienna
+                </td>
+            </tr>
+            <tr>
+                <td class="abstract">
+                    Research interest: Nanomaterials as biosensor in Point-of-care
+                </td>
+            </tr>
+        </table>
+        <table id="LamPhan">
+            <tr>
+                <td class="date" rowspan="3">
+                </td>
+                <td class="scholar">
+                    Phan Thanh Lâm, PhD Student in Environmental Techonology
+                </td>
+            </tr>
+            <tr>
+                <td class="speaker">
+                    Technical University of Vienna
+                </td>
+            </tr>
+            <tr>
+                <td class="abstract">
+                    Research interest: Environmental Techonology
+                </td>
+            </tr>
+        </table>
+
+        <table id="HaHoang">
+            <tr>
+                <td class="date" rowspan="3">
+                </td>
+                <td class="scholar">
+                    Hoàng Lê Hà, PreDoc in Computer Science
+                </td>
+            </tr>
+            <tr>
+                <td class="speaker">
+                    Technical University of Vienna
+                </td>
+            </tr>
+            <tr>
+                <td class="abstract">
+                    Research interest: Machine learning/Deep learning
+                </td>
+            </tr>
+        </table>
     <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2659.901724051181!2d16.400493315852046!3d48.18924497922747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d07592c033617%3A0x98ca58fdd12e7bb8!2sVienna%20BioCenter%20%E2%80%93%20Wissenschaftliche%20Standortgemeinschaft!5e0!3m2!1sde!2sat!4v1630096322280!5m2!1sde!2sat"></iframe>
 
    <!-- <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten">-->
