--- a/program/index.html
+++ b/program/index.html
@@ -70,7 +70,7 @@
                 11/2021
             </td>
             <td class="title">
-                Machine learning and A.I.: what they are and how they might impact on your life. 
+                Machine learning and A.I.: what they are and how they might make impact on your life. 
             </td>
         </tr>
         <tr>
