--- a/program/index.html
+++ b/program/index.html
@@ -64,6 +64,84 @@
         </tr>
     </table>
     <table id="speaker">
+
+
+        <tr>
+            <td class="date" rowspan="3">
+                01/2022
+            </td>
+            <td class="title">
+                Secretion and cell-surface display of recombinant proteins in Lactic acid bacteria: Principles and applications
+            </td>
+        </tr>
+
+        <tr>
+            <td class="speaker">
+                Tran Anh Minh (University of Natural Resources and Applied Life Sciences, Vienna)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <p></p>
+                <p>
+                </p>
+            </td>
+        </tr>
+        <tr>
+            <td class="date" rowspan="3">
+                02/2022
+            </td>
+            <td class="title">
+                Coming soon...
+            </td>
+        </tr>
+
+        <tr>
+            <td class="speaker">
+                Pham Thanh Lam (AIT Austrian Institute of Technology, Vienna)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <p>
+               </p>
+            </td>
+        </tr>
+
+        <tr>
+            <td class="date" rowspan="3">
+                03/2022
+            </td>
+            <td class="title">
+                Case study: The use of SAR backscatter time series for characterising rice phenology
+            </td>
+        </tr>
+
+        <tr>
+            <td class="speaker">
+                Nguyen Ba Duy (University of Natural Resources and Applied Life Sciences, Vienna)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <p>
+                    The expansion of rice cropland is one of the most significant pieces of information for every rice production’s national economy systems, such as risk management for the insurance industry. Also, environmental reporting, and contributions to greenhouse gases due to agricultural practices, life cycle inventory, life cycle assessment, water cycle analysis, crop forecasting are playing an important role. An important data sources for rice cropland records are space borne microwave instruments due to the advantage of being non-susceptible to cloud cover.                   
+                </p>
+                <p>
+                    A Synthetic Aperture Radar (SAR) is an active imaging system operating in the microwave spectrum. The resulting images reflect the backscatter properties of the surface, which are determined by the physical (e.g. surface roughness, geometric structure, orientation) and electrical (e.g. dielectric constant, moisture content, conductivity) characteristics of the surface, and the radar frequency of the sensor (e.g. L-, C-, X-band).  
+
+                </p>
+                <p>
+                    Multi-temporal SAR images analysis is a common approach for rice cropland monitoring. High variations of SAR backscatter signal during the growing rice crop from other types of land use and land cover. It has therefore evolved being as one of the most important methods for rice monitoring from space borne microwave datasets. However, there is no study was able to utilize the complete Advanced Synthetic Aperture Radar (Envisat  ASAR) archive due to incidence angle effects on rice mapping. In addition, the exploitation of the full potential of the Sentinel-1 mission for rice monitoring (at regional or continental scales) is still subject to ongoing research. 
+                </p>
+                <p>
+                    This dissertation developed a time series backscatter analyzing method, aiming for classifying rice areas and determining the seasonality of rice crops. A phenology SAR-based approach is proposed and successfully applied for rice monitoring, which allow for a more objective interpretation of rice areas from historical Envisat ASAR data (horizontal-horizontal: HH polarization, wide swath mode) and the current Sentinel-1 SAR mission data source(vertical-horizontal: VH polarization)
+                </p>
+            </td>
+        </tr>
+
+    
+
         <tr>
             <td class="date" rowspan="3">
                 12/2022
@@ -103,6 +181,8 @@
                 </p>
             </td>
         </tr>
+
+
         <tr>
             <td class="date" rowspan="3">
                 01/2022
@@ -111,6 +191,7 @@
                 Secretion and cell-surface display of recombinant proteins in Lactic acid bacteria: Principles and applications
             </td>
         </tr>
+
         <tr>
             <td class="speaker">
                 Tran Anh Minh (University of Natural Resources and Applied Life Sciences, Vienna)
@@ -123,6 +204,7 @@
                 </p>
             </td>
         </tr>
+
         <tr>
             <td class="date" rowspan="3">
                 11/2021
