--- a/program/index.html
+++ b/program/index.html
@@ -119,7 +119,7 @@
 
         <tr>
             <td class="speaker">
-                Nguyen Ba Duy (University of Natural Resources and Applied Life Sciences, Vienna)
+                Nguyen Ba Duy (Technische Universität Wien)
             </td>
         </tr>
         <tr>
