--- a/program/index.html
+++ b/program/index.html
@@ -140,6 +140,26 @@
             </td>
         </tr>
 
+        <tr>
+            <td class="date" rowspan="3">
+                04/2022
+            </td>
+            <td class="title">
+                Coming soon...
+            </td>
+        </tr>
+
+        <tr>
+            <td class="speaker">
+                Tran Anh Dung (Technische Universität Wien)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <p>
+              </p>
+            </td>
+        </tr>
     
 
         <tr>
