--- a/program/index.html
+++ b/program/index.html
@@ -71,8 +71,7 @@
                 01/2022
             </td>
             <td class="title">
-                Secretion and cell-surface display of recombinant proteins in Lactic acid bacteria: Principles and applications
-            </td>
+                Secretion and cell-surface display of protein in Gram-positive bacteria            </td>
         </tr>
 
         <tr>
@@ -82,8 +81,13 @@
         </tr>
         <tr>
             <td class="abstract">
-                <p></p>
                 <p>
+                    For many years, bacteria have been employed as hosts to produce proteins of interest with desired functions. Proteins of interest can be produced in Gram-negative and Gram-positive bacterial hosts, but the latter has been preferred for food and pharmaceutical-related applications. However, one of the bottlenecks of using Gram-positive bacteria which is difficult to tackle is low amounts of secreted foreign proteins. One of the solutions for that issue is to select signal peptides that result in a good yield of secreted protein. In every step of foreign protein synthesis and trafficking in the host’s cell, there are many factors affecting the protein secretion’s efficiency. In this research, we created 9 different gene clusters by combining 5 different signal peptide sequences with 2 genes encoding the enzyme alpha-amylases. The gene clusters were expressed in Lactobacillus cells, the yield of mRNA and target proteins were then evaluated. The results showed that changing the signal peptides lead to changing the mRNA amount of the target gene, thus varying the protein’s yield even before the secretion takes place. Besides the protein secretion, anchoring protein on the cell’s surface was also of interest because of its promising application in many aspects including functional food and pharmaceutical. A reporter protein (enzyme chitosanase) was successfully anchored on the surface of Lactobacillus cell with stable biological activity and affinity. This result suggested a promising possibility of displaying proteins derived from viruses for the production and development of oral vaccines.
+
+                </p>
+                <p>
+                    In addition to the research’s results, this topic will (attempt to) show those not working in biotechnology-related disciplines how desired proteins are produced in the laboratory. Some nowadays “popular” terms such as Real-time PCR and mRNA will also be mentioned briefly or thoroughly.
+
                 </p>
             </td>
         </tr>
