--- a/schedule/index.html
+++ b/schedule/index.html
@@ -53,6 +53,18 @@
     <table class="flyers">
         <tr>
             <td class="flyer">
+                <a href="assets/PhD Talk 5.pdf">
+                    <img src="assets/PhD Talk 5.jpg" alt="RNAseq" style="width:100%">
+                </a>
+            </td>
+            <td class="flyer">
+                <a href="assets/PhD Talk 3.pdf">
+                    <img src="assets/PhD Talk 3.png" alt="RNA Sequencing in Plant Biology" style="width:100%">
+                </a>
+            </td>
+        </tr>
+        <tr>
+            <td class="flyer">
                 <a href="assets/PhD Talk 4.pdf">
                     <img src="assets/PhD Talk 4.png" alt="RNAseq" style="width:100%">
                 </a>
@@ -62,7 +74,6 @@
                     <img src="assets/PhD Talk 3.png" alt="RNA Sequencing in Plant Biology" style="width:100%">
                 </a>
             </td>
-
         </tr>
     </table>
     <table class="flyers">
