--- a/program/index.html
+++ b/program/index.html
@@ -65,6 +65,36 @@
     </table>
     <table id="speaker">
 
+        <tr>
+            <td class="date" rowspan="3">
+                02/2022
+            </td>
+            <td class="title">
+                Robust Deep Learning Frameworks For Acoustic Scene And Respiratory Sound Classification
+            </td>
+        </tr>
+
+        <tr>
+            <td class="speaker">
+                Pham Thanh Lam (AIT Austrian Institute of Technology, Vienna)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <p>
+                    Although research on Acoustic Scene Classification (ASC) isvery close to, oreven overshadowed by different popular research areas knownas Automatic SpeechRecognition (ASR), Speaker Recognition (SR) or Image Processing (IP), this fieldpotentially opens up several distinct and meaningful application areas based onenvironment context detection.  The challenges of ASC mainly come from dif-ferent noise resources, various sounds in real-world environments, occurring assingle sounds, continuous sounds or overlapping sounds. Incomparison to speech,sound scenes are more challenging mainly due to their being unstructured in formand closely similar to noise in certain contexts. Although awide range of pub-lications have focused on ASC recently, they show task-specific ways that eitherexplore certain aspects of an ASC system or are evaluated on limited acousticscene datasets.
+               </p>
+               <P>
+                Therefore, the aim of this thesis is to contribute to the development of a ro-bust framework to be applied for ASC, evaluated on various recently publisheddatasets, and to achieve competitive performance comparedto the state-of-the-art systems. To do this, a baseline model is firstly introduced. Next, extensiveexperiments on the baseline are conducted to identify key factors affecting finalclassification accuracy. From the comprehensive analysis,a robust deep learningframework, namely theEncoder-Decoderstructure, is proposed to address threemain factors that directly affect an ASC system. These factors comprise low-levelinput features, high-level feature extraction methodologies, and architectures for final classification. Within the proposed framework, three spectrogram transfor-mations, namely Constant Q Transform (CQT), gammatone filter (Gamma), andlog-mel, are used to convert recorded audio signals into spectrogram representa-tions that resemble two-dimensional images. These three spectrograms used arereferred to as low-level input features. To extract high-level features from spectro-grams, a novelEncoderarchitecture, based on Convolutional Neural Networks, isproposed. In terms of theDecoder, also referred as to the final classifier, variousmodels such as Random Forest Classifier, Deep Neural Networkand Mixture ofExperts, are evaluated and structured to obtain the best performance. 
+               </P>
+               <p>
+                To further improve an ASC system’s performance, a scheme of two-level hierar-chical classification, replacing the role ofDecoderclassification recently mentioned,is proposed. This scheme is useful to transform an ASC task over all categoriesinto multiple ASC sub-tasks, each spanning fewer categories, in a divide-and-conquer strategy. At the highest level of the proposed scheme, meta-categoriesof acoustic scene sounds showing similar characteristics are classified. Next, cate-gories within each meta-category are classified at the second level. Furthermore,an analysis of loss functions applied to different classifiers is conducted.  Thisanalysis indicates that a combination of entropy loss and triplet loss is useful toenhance performance, especially with tasks that comprise fewer categories. 
+               </p>
+               <p>
+                Further exploring ASC in terms of potential application to the health ser-vices, this thesis also explores the 2017 Internal Conference on Biomedical HealthInformatics (ICBHI) benchmark dataset of lung sounds. A deep-learning frame-work, based on our novel ASC approaches, is proposed to classify anomaly cyclesand predict respiratory diseases.  The results obtained from these experimentsshow exceptional performance. This highlights the potential applications of usingadvanced ASC frameworks for early detection of auditory signals. In this case,signs of respiratory diseases, which could potentially be highly useful in future indirecting treatment and preventing their spread.
+               </p>
+            </td>
+        </tr>
 
         <tr>
             <td class="date" rowspan="3">
@@ -89,26 +119,6 @@
                     In addition to the research’s results, this topic will (attempt to) show those not working in biotechnology-related disciplines how desired proteins are produced in the laboratory. Some nowadays “popular” terms such as Real-time PCR and mRNA will also be mentioned briefly or thoroughly.
 
                 </p>
-            </td>
-        </tr>
-        <tr>
-            <td class="date" rowspan="3">
-                02/2022
-            </td>
-            <td class="title">
-                Coming soon...
-            </td>
-        </tr>
-
-        <tr>
-            <td class="speaker">
-                Pham Thanh Lam (AIT Austrian Institute of Technology, Vienna)
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                <p>
-               </p>
             </td>
         </tr>
 
