--- a/schedule/index.html
+++ b/schedule/index.html
@@ -53,8 +53,20 @@
     <table class="flyers">
         <tr>
             <td class="flyer">
+                <a href="assets/PhD Talk 6.pdf">
+                    <img src="assets/PhD Talk 6.jpg" alt="RNAseq" style="width:100%">
+                </a>
+            </td>
+            <td class="flyer">
                 <a href="assets/PhD Talk 5.pdf">
-                    <img src="assets/PhD Talk 5.jpg" alt="RNAseq" style="width:100%">
+                    <img src="assets/PhD Talk 5.png" alt="RNA Sequencing in Plant Biology" style="width:100%">
+                </a>
+            </td>
+        </tr>
+        <tr>
+            <td class="flyer">
+                <a href="assets/PhD Talk 4.pdf">
+                    <img src="assets/PhD Talk 4.jpg" alt="RNAseq" style="width:100%">
                 </a>
             </td>
             <td class="flyer">
