--- a/schedule/index.html
+++ b/schedule/index.html
@@ -54,24 +54,12 @@
         <tr>
             <td class="flyer">
                 <a href="assets/PhD Talk 6.pdf">
-                    <img src="assets/PhD Talk 6.jpg" alt="RNAseq" style="width:100%">
+                    <img src="assets/PhD Talk 6.png" alt="" style="width:100%">
                 </a>
             </td>
             <td class="flyer">
                 <a href="assets/PhD Talk 5.pdf">
-                    <img src="assets/PhD Talk 5.png" alt="RNA Sequencing in Plant Biology" style="width:100%">
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td class="flyer">
-                <a href="assets/PhD Talk 4.pdf">
-                    <img src="assets/PhD Talk 4.jpg" alt="RNAseq" style="width:100%">
-                </a>
-            </td>
-            <td class="flyer">
-                <a href="assets/PhD Talk 3.pdf">
-                    <img src="assets/PhD Talk 3.png" alt="RNA Sequencing in Plant Biology" style="width:100%">
+                    <img src="assets/PhD Talk 5.png" alt="" style="width:100%">
                 </a>
             </td>
         </tr>
@@ -86,6 +74,8 @@
                     <img src="assets/PhD Talk 3.png" alt="RNA Sequencing in Plant Biology" style="width:100%">
                 </a>
             </td>
+        </tr>
+
         </tr>
         <tr>
             <td class="flyer">
