--- a/schedule/index.html
+++ b/schedule/index.html
@@ -59,7 +59,7 @@
             </td>
             <td class="flyer">
                 <a href="assets/PhD Talk 5.pdf">
-                    <img src="assets/PhD Talk 5.png" alt="" style="width:100%">
+                    <img src="assets/PhD Talk 5.jpg" alt="" style="width:100%">
                 </a>
             </td>
         </tr>
