--- a/program/index.html
+++ b/program/index.html
@@ -149,7 +149,7 @@
                 04/2022
             </td>
             <td class="title">
-                Coming soon...
+                Radical Induced Cationic Frontal Polymerization for Preparation of Epoxy Composites
             </td>
         </tr>
 
@@ -161,6 +161,20 @@
         <tr>
             <td class="abstract">
                 <p>
+                    Radical induced cationic frontal polymerization (RICFP) is an elegant technique which
+combines the advantages of thermal curing and photopolymerization in a fast and energy-efficient process. Within the last few years, polymers based on the most important epoxy resin bisphenol-A diglycidyl ether (BADGE) were successfully produced by RICFP. This encourages to further investigate the curing technique for established applications of BADGE based formulations. However, BADGEs are highly viscous and low reactive resins, which are disadvantages for the RICFP in applications of e.g. composite manufacturing. Since, low viscosity is indeed necessary to prepare highly-filled composites. Also, the exothermic heat which is the driving force of RICFP and relates to the reactivity of the monomer, may be affected by heat uptakes of reinforcements in composites.
+              </p>
+              <p>
+                To overcome high viscosity and low reactivity, reactive diluents were firstly investigated
+                for RICFP of BADGE-based systems. Different types of cationic monomers such as
+                cycloaliphatic epoxides, aliphatic glycidyl ethers, vinyl ethers, and oxetanes were used.
+                Effects of these diluents on decreasing the viscosity and increasing the reactivity of the
+                formulation, thin layer curing, and properties of the final polymers were studied.
+                Afterwards, the most reactive diluents were applied in RICFP formulations for
+                manufacturing composites with different types of fillers and fibers. Influence of filler
+                contents on the frontal parameters and performance of the composites were investigated.
+                Additionally, another crucial part of this PhD project is to develop a new type of prepreg (RICFP-prepreg). Prepregs are "pre-impregnated" composite fibers in a thermoseting polymer matrix. Although their common use in industry, they bear drawbacks in limited storage stability owning to thermal curing systems. In this work, RICFP-prepregs with thermal stability were implemented following two different approaches. The first approach is based on a hot-melt or solvent-based process. While, the second is a sequential dual curing system which contains thermally induced radical polymerization of acrylates and frontal polymerization of cationic monomers.
+                
               </p>
             </td>
         </tr>
