--- a/program/index.html
+++ b/program/index.html
@@ -69,6 +69,33 @@
                 04/2022
             </td>
             <td class="title">
+                Infant gut bifidobacterial glycoside hydrolases for the synthesis of human milk oligosaccharide structures            </td>
+        </tr>
+
+        <tr>
+            <td class="speaker">
+                Le Vu Khanh Trang (University of Natural Resources and Applied Life Sciences, Vienna)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <p>
+            Human milk is known as the special source of nourishment for healthy development of newborns, in which, human milk oligosaccharides (HMOs) are the most abundant compounds in breast milk and play a vital role in early development of infants. Since HMOs serve as a selective substrate for certain gut microbes, they selectively stimulate the growth and activity of some beneficial bacteria, especially bifidobacteria leading to their dominance in the gut of breast-fed infants, thus HMOs have the potential prebiotic or bifidogenic effects. In addition, there is strong evidence that the complex mixture of HMOs shows different physiological importance and health benefits for the breast-fed infant, for example, preventing pathogenic microorganisms by blocking their adhesive, colonization, and invasion. 
+                </p>
+              <p>
+                Due to their functional benefits, HMOs are of great interest for human nutrition which creates an enormous impetus for biosynthesis of HMOs for use in infant formulas and other products. However, the production of HMOs is hampered by the structural and compositional complexity of HMOs. HMO structures can be produced by different techniques including chemical, microbial/enzymatic synthesis as well as isolation from suitable natural resources. The promising approach towards the defined HMO structures production seems to be enzymatic synthesis, in which, enzymatic transglycosylation by glycoside hydrolases (or glycosidases, GHs), which are the crucial enzymes for industrial-scale glycan synthesis based on their ability to use cheap and abundant substrates, holds great potential in HMOs synthesis. The main challenge of using GHs for transglycosylation is their inherent hydrolysis activity, both substrates and products. Therefore, it is challenging to discover novel transglycosidases as well as to engineer the enzymes for improved transglycosylation efficiency.   
+              </p>
+              <p>
+                The objectives of this PhD project are to investigate the transglycosylation activities of the GH42 β-galactosidase and GH20 β-N-acetylhexosaminidase from B. breve and to investigate the synthesis of HMO structures using the recombinant enzymes.
+              </p>
+            </td>
+        </tr>
+
+        <tr>
+            <td class="date" rowspan="3">
+                04/2022
+            </td>
+            <td class="title">
                 Radical Induced Cationic Frontal Polymerization for Preparation of Epoxy Composites
             </td>
         </tr>
