--- a/schedule/index.html
+++ b/schedule/index.html
@@ -53,6 +53,17 @@
     <table class="flyers">
         <tr>
             <td class="flyer">
+                <a href="assets/PhD Talk 9.pdf">
+                    <img src="assets/PhD Talk 9.jpg" alt="" style="width:100%">
+                </a>
+            </td>
+            <td class="flyer">
+                <a href="assets/PhD Talk 8.pdf">
+                    <img src="assets/PhD Talk 8.jpg" alt="" style="width:100%">
+                </a>
+            </td>
+        </tr><tr>
+            <td class="flyer">
                 <a href="assets/PhD Talk 8.pdf">
                     <img src="assets/PhD Talk 8.jpg" alt="" style="width:100%">
                 </a>
@@ -62,7 +73,8 @@
                     <img src="assets/PhD Talk 7.jpg" alt="" style="width:100%">
                 </a>
             </td>
-        </tr><tr>
+        </tr>
+        <tr>
             <td class="flyer">
                 <a href="assets/PhD Talk 6.pdf">
                     <img src="assets/PhD Talk 6.png" alt="" style="width:100%">
