--- a/program/index.html
+++ b/program/index.html
@@ -47,8 +47,47 @@
     </table>
 
     <h2>Seminar Program</h2>
+    <table>
+
+        <tr>
+            <td class="date" rowspan="1">
+                <b color = "red">SEASON 2</b>
+            </td>
+            <td class="title-special">
+                Broaden our network.
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+
+            </td>
+        </tr>
+    </table>
+    <table id="speaker">
+        <tr>
+    
+    <tr>
+        <td class="date" rowspan="3">
+            04/2022
+        </td>
+        <td class="title">
+            Comparative proteotranscriptomics reveals multidrug-resistant mechanisms and pathogenesis of a human fungal pathogen.    </tr>
+
+    <tr>
+        <td class="speaker">
+            Phan Canh Trinh (Medical University of Vienna, Max Perutz Labs, Vienna BioCenter)
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract">
+
+        </td>
+    </tr>
+        </tr>
+    </table>
 
     <table>
+
         <tr>
             <td class="date" rowspan="1">
                 <b color = "red">SEASON 1</b>
@@ -90,7 +129,7 @@
               </p>
             </td>
         </tr>
-
+       
         <tr>
             <td class="date" rowspan="3">
                 04/2022
